submit button added to form

--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -21,3 +21,5 @@
         <%= user.label :password_confirmation, "Confirm Password" %>
         <%= user.email_field :password_confirmation %>
     <% end %>
+    <%= f.submit %>
+<% end %>
