static page sign out link

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,2 +1,2 @@
 <h1>Show view for Teams</h1>
-<p>Hello, <%= current_user.name %>! You're on the <%= current_user.team.name %> team!</p>
+<p>Hello, <%= current_user.name %>! You're on the <%= current_team.name %> team!</p>
