--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,6 @@
 <h2><%= @project.name %></h2>
 
-<%= link_to "Enroll in this project", tasks_path, method: :post %>
+<%= form_for @task do |f| %>
+<%= f.hidden_field :user_id, value: current_user.id %>
+<%= f.submit "Enroll in Project" %>
+<% end %>
