--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,18 @@
   </head>
 
   <body>
+    <header>
+      <h1>Taskit</h1>
+      <nav>
+        <% if signed_in? %>
+        <%= link_to "My Page", user_path(current_user)%> |
+        <%= link_to "Team", team_path(current_team) %> |
+        <%= link_to "Sign Out", destroy_user_session_path %>
+        <% else %>
+        <% end %>
+       </nav>
+      </header>
+
      <p class="notice"><%= notice %></p>
      <p class="alert"><%= alert %></p>
     <%= yield %>
