fixed routing in app.html and changed in routs.rb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <% if signed_in? %>
         <%= link_to "My Page", user_path(current_user)%> |
         <%= link_to "Team", team_path(current_team) %> |
-        <%= link_to "Sign Out", destroy_user_session_path %>
+        <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
         <% else %>
         <% end %>
        </nav>
