--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,5 @@
 <h2><%= @project.name %></h2>
-<% if claimed_project?(@project) %>
-<p>Claimed</p>
-<% end %>
+<%= Claimed if @project.claimed_project? %>
 <% if user_has_task?(@project) %>
 <p>by you.</p>
 <% else %>
