routes and non-user sign up copy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,10 @@
         <%= link_to "Team", team_path(current_team) %> |
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
         <% else %>
+        <p>Get to Work! | </p>
+        <%= link_to "Sign up on a New Team", new_team_path %> |
+        <%= link_to "Join an Existing Team", new_user_registration_path %> |
+        <%= link_to "Sign In", new_user_session_path %>
         <% end %>
        </nav>
       </header>
