routes on routes

--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,3 +1,5 @@
+<h2>Sign up for New Team</h2>
+
 <%= form_for @team do |f| %>
     <%= f.label :name, "Team Name" %>
     <%= f.text_field :name %><br><br>
