registration fields are fitting to data type

--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -10,18 +10,18 @@
     <%= f.label :password_confirmation, "Confirm Password" %>
     <%= f.text_field :password_confirmation %> <br><br>
 
-    <%= fields_for :users, @team.users.build do |user| %>
+    <%= fields_for :user, @team.users.build do |user| %>
         <%= user.label :name, "Your Name" %>
-        <%= user.email_field :name %> <br>
+        <%= user.text_field :name %> <br>
 
         <%= user.label :email, "Your Email" %>
         <%= user.email_field :email %> <br>
 
         <%= user.label :password, "Your Password" %>
-        <%= user.email_field :password %> <br>
+        <%= user.password_field :password %> <br>
 
         <%= user.label :password_confirmation, "Confirm Password" %>
-        <%= user.email_field :password_confirmation %>
+        <%= user.password_field :password_confirmation %>
     <% end %>
     <%= f.submit %>
 <% end %>
