--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,19 @@
 <h2>Sign up - Existing Team</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: user_registration_path) do |f| %>
   <%= devise_error_messages! %>
 
+  <%= fields_for :team, @user.team do |team_fields| %>
+  <div class="field">
+    <%= team_fields.label :name, "Team Name" %><br />
+    <%= team_fields.text_field :name, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= team_fields.label :password, "Team Password" %><br />
+    <%= team_fields.password_field :password, autofocus: true %>
+  </div>
+  
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
