--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome to TaskIt!</h1>
+<%= link_to 'Sign in with Twitter', '/auth/:twitter' %>
 
 <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
