--- a/app/views/users/_pending.html.erb
+++ b/app/views/users/_pending.html.erb
@@ -7,3 +7,5 @@
 <% else %>
     <p>You have no projects</p>
 <% end %>
+
+<%= link_to "#{user.name}'s Completed Projects", user_complete_path(user.team, user) %>
