saving. Need to fix issue with ID not matching

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Taskit</title>
+    <title>Taskit - Project Management Tool</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -25,8 +25,11 @@
        </nav>
       </header>
 
+      <main>
+
      <p class="notice"><%= notice %></p>
      <p class="alert"><%= alert %></p>
     <%= yield %>
+    </main>
   </body>
 </html>
