--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,7 +3,13 @@
         <% if user_has_task?(@project) %>
         <p>This is your project.</p>
     <% else %>
-        <%= form_for @task  %>
+        <%= form_for @task do |f| %>
+        <%= f.hidden_field :project_id, value: @project.id %>
+        <%= f.hidden_field :user_id, value: current_user.id %>
+        <%= f.submit "Add Task" %>
+    <% end %>
     <% end %>
 <% end %>
+
+<%= link_to "Edit Project", edit_project_path(@project) %> <%= link_to "Delete Project", project_path(@project), method: :delete %>
 
