--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+     text-align: center;
+     background: aquamarine;
+ }
+
+ h1, h2 {
+     color: gray;
+     font-family: Arial, Helvetica, sans-serif;
+ }
