More style changes. Moved sign in with twitter to the if statement in header

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,10 +16,25 @@
 
  body {
      text-align: center;
-     background: aquamarine;
+     
  }
 
  h1, h2 {
      color: gray;
      font-family: Arial, Helvetica, sans-serif;
  }
+
+a {
+    text-decoration: none;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+nav, main {
+    max-width: 80%;
+    margin: auto;
+    background: rgba(255, 255, 255, 0.8);
+}
+
+a:hover {
+    color: #888;
+}
