--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,4 +1,3 @@
-<h1>Welcome to TaskIt!</h1>
-<%= link_to 'Sign in with Twitter', '/auth/twitter/' %>
+<h2>Project Management Made Easy</h2>
 
 <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
