--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,3 +38,19 @@ nav, main {
 a:hover {
     color: #888;
 }
+
+button, input[type=submit] {
+    font-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #89cbf5;
+    border-radius: 5px;
+
+}
+
+.project {
+    padding: 5px;
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+}
