--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for @project do |f| %>
-<%= f.label :name %>: <%= f.text_field :name %> <br>
+<%= f.label :name %>: <%= f.text_field :name %><br><br>
 <%= f.submit %>
 <% end %>
