--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,5 +33,8 @@
      <p class="alert"><%= alert %></p>
     <%= yield %>
     </main>
+    <footer>
+      Taskit | Project Management Made Easy
+    </footer>
   </body>
 </html>
