--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,16 +1,24 @@
 <h2><%= @project.name %></h2>
-    <% if @project.claimed_project? %>
-        <% if user_has_task?(@project) %>
-        <p>This is your project.</p>
-    <% else %>
         <%= form_for @task do |f| %>
         <%= f.hidden_field :project_id, value: @project.id %>
         <%= f.hidden_field :user_id, value: current_user.id %>
         <%= f.text_area :notes %>
         <%= f.submit "Add Task" %>
     <% end %>
-    <% end %>
-<% end %>
+
+    <% if @project.tasks.size > 0 %>
+    <table>
+        <tr>
+            <th>Task</th>
+        </tr>
+        <% @project.tasks.each do |task| %>
+        <tr>
+        <td><%= task.notes %></td>
+        <% end %>
+        <% end %>
+        </table>
+<br><br><br>
+
 
 <%= link_to "Edit Project", edit_project_path(@project) %> | <%= link_to "Delete Project", project_path(@project), method: :delete %>
 
