--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,7 @@
         <%= form_for @task do |f| %>
         <%= f.hidden_field :project_id, value: @project.id %>
         <%= f.hidden_field :user_id, value: current_user.id %>
-        <%= f.text_area :notes %>
+        <%= f.label :notes %>: <%= f.text_field :notes %>
         <%= f.submit "Add Task" %>
     <% end %>
 
