--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,12 +16,21 @@
 
  body {
      text-align: center;
+     background-color: #4b1eee;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='106' height='106' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23401aca' fill-opacity='0.41'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.41'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
      
  }
 
  h1, h2 {
-     color: gray;
+     color: rgb(98, 0, 255);
      font-family: Arial, Helvetica, sans-serif;
+     background-color: white;
+     padding: 10px;
+     border-radius: 5px;
+     width: 50%;
+     margin: auto;
+     margin-top: 2%;
+     margin-bottom: 2%;
  }
 
 a {
@@ -30,14 +39,17 @@ a {
 }
 
 nav, main, footer {
-    max-width: 80%;
     margin: auto;
+    padding: 5px;
     background: rgba(255, 255, 255, 0.8);
+    background-size: cover;
 }
 
 footer {
     padding: 20px 0;
     font-size: 70%;
+    background: rgb(51, 51, 51);
+    color: white;
 }
 
 a:hover {
