--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for @task do |f| %>
-<%= f.label :name %>: <%= f.text_field :name %> <br>
+<%= f.label :notes %>: <%= f.text_field :notes %> <br>
 <%= f.submit %>
 <% end %>
