--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -71,3 +71,10 @@ button, input[type=submit] {
 p {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.table {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+}
