--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,20 +6,25 @@
         <%= f.submit "Add Task" %>
     <% end %>
 
-    <% if @project.tasks.size > 0 %>
-    <table class="table">
-        <tr>
-            <th>Task</th>
-        </tr>
-        <% @project.tasks.each do |task| %>
-        <tr>
-        <td><%= task.notes %></td>
-        <td><% if !task.completed %><%= link_to "Mark Complete", 'tasks/#{:id}/completed' %></td>
-        <% end %>
-        <% end %>
-        <% end %>
-        </table>
-<br><br><br>
+<% if @project.tasks.any? %>
+  <table class="table">
+    <tr>
+      <th>Task</th>
+    </tr>
+    <% @project.tasks.each do |task| %>
+      <tr>
+        <td>
+          <%= task.notes %>
+        </td>
+        <td>
+          <% unless task.completed %>
+            <%= link_to "Mark Complete", completed_task_path(task), method: :patch %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+<% end %>
 
 
 <%= link_to "Edit Project", edit_project_path(@project) %> | <%= link_to "Delete Project", project_path(@project), method: :delete %>
