--- a/app/views/users/_complete.html.erb
+++ b/app/views/users/_complete.html.erb
@@ -2,7 +2,7 @@
 
 <% if user.completed_tasks.count > 0 %>
     <% user.completed_tasks.each do |task| %>
-        <%= link_to task.project.name, porject_path(task.project) %>
+        <%= link_to task.project.name, project_path(task.project) %>
         <% end %>
     <% else %>
         <p>No projects completed</p>
