--- a/app/views/users/_pending.html.erb
+++ b/app/views/users/_pending.html.erb
@@ -1,10 +1,9 @@
-<h2>Projects for <%= user.name %></h2>
+<h2>Tasks completed by <%= user.name %> </h2>
 
 <% if user.tasks.count > 0 %>
-    <% user.pending_tasks.each do |task| %>
-    <% task.project.name %>
-    <% end %>
-<% else %>
-    <p>You have no projects</p>
+    <% user.tasks.completed.each do |task| %>
+        <%= link_to task.notes, project_path(task.project) %>
+        <% end %>
+    <% else %>
+        <p>No tasks completed</p>
 <% end %>
-
