--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,5 @@
 <h2><%= @project.name %></h2>
-        <%= form_for @task do |f| %>
+        <%= form_for [@project, @task] do |f| %>
         <%= f.hidden_field :project_id, value: @project.id %>
         <%= f.hidden_field :user_id, value: current_user.id %>
         <%= f.label :notes %>: <%= f.text_field :notes %>
@@ -14,13 +14,13 @@
     <% @project.tasks.each do |task| %>
       <tr>
         <td>
-          <%= task.notes %>
+          <%= link_to task.notes, [@project, task] %>
           <%= task.status %>
         </td>
         <td>
         <% if !task.id.nil? %>
          
-            <%= link_to "Change Status", toggle_status_task_path(task) %>
+            
         <% end %>
         </td>
       </tr>
