--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,3 @@
-<h1><%= link_to @task.note, task_path(@task) %></h1>
+<h1><%= link_to @task.notes %></h1>
 
-<%= link_to "Project", projects_path %>
+<%= link_to "Home", root_path %>
