changed lyout in task show

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,3 @@
-<h1><%= task.notes %></h2>
+<h1><%= task.notes %></h1>
 
-<h3><%= link_to tasks.project.name, project_tasks_path(task.project) %></h3>
+<h3><%= link_to task.project.name, project_tasks_path(task.project) %></h3>
