cleaned up tasks. Query method displaying

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,8 +14,10 @@
     <% @project.tasks.each do |task| %>
       <tr>
         <td>
+          <% if task.notes %>
           <%= link_to task.notes, [@project, task] %>
           <%= task.status %>
+          <% end %>
         </td>
       </tr>
     <% end %>
