changing where AJAX functionality is placed

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -6,3 +6,10 @@
 <% current_team.projects.each do |project| %>
 <div class="project"><%= link_to project.name, project_path(project) %></div>
 <% end %>
+
+<h6>AJAX stuff</h6>
+<p> 
+<%= link_to "Load Projects" %>
+ </p>
+<br>
+<h6>End Ajax stuff</h6>
