load tasks link now points to task index page

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,2 @@
-<h1><%= task.notes %></h1>
+<h2>This is the Tasks Index page</h2>
 
-<h3><%= link_to task.project.name, project_tasks_path(task.project) %></h3>
