prevent default method

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -31,9 +31,11 @@
 <br><br>
 
 <h5>AJAX stuff</h5>
+<div class="tasks"></div>
 <p> 
 <%= link_to "Load Tasks", project_tasks_path(@project), :class => "load_tasks" %>
  </p>
+
 <br>
 <h6>End Ajax stuff</h6>
 
